RESOLVED FIXED277438
REGRESSION (280789@main?): [ Sonoma wk2 release ] http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/draw.html is constant crash.
https://bugs.webkit.org/show_bug.cgi?id=277438
Summary REGRESSION (280789@main?): [ Sonoma wk2 release ] http/tests/webgpu/webgpu/ap...
Anfernee Viduya
Reported 2024-07-31 11:26:04 PDT
http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/draw.html went from timing out to a constant crash. HISTORY: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fwebgpu%2Fwebgpu%2Fapi%2Fvalidation%2Fencoding%2Fcmds%2Frender%2Fdraw.html CRASH LOG: 0 com.apple.AGXMetalG14 0x1e787c478 AGX::RenderContext<AGX::G14X::Encoders, AGX::G14X::Classes, AGX::G14X::ObjClasses>::drawIndexedPrimitivesWithIndirectBuffer(MTLPrimitiveType, AGXG14XFamilyBuffer*, unsigned int, MTLIndexType, AGXG14XFamilyBuffer*, unsigned int) + 220 1 com.apple.AGXMetalG14X 0x1e787c478 -[AGXG14XFamilyRenderContext drawIndexedPrimitives:indexType:indexBuffer:indexBufferOffset:indirectBuffer:indirectBufferOffset:] + 364 2 com.apple.WebGPU 0x1029fc660 WebGPU::RenderPassEncoder::drawIndexedIndirect(WebGPU::Buffer const&, unsigned long long) 3 com.apple.WebKit 0x108fd52d0 WebKit::RemoteRenderPassEncoder::didReceiveStreamMessage(IPC::StreamServerConnection&, IPC::Decoder&) 4 com.apple.WebKit 0x1099ffc9c IPC::StreamServerConnection::dispatchStreamMessage(IPC::Decoder&&, IPC::StreamMessageReceiver&) 5 com.apple.WebKit 0x1099fecbc IPC::StreamServerConnection::dispatchStreamMessages(unsigned long) LINK: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/281653@main%20(4920)/http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/draw-crash-log.txt DESCRIPTION: This test has been crashing for some time now. Granted it has been timing out but regressed into a crash. The reason for listing 280789@main is that it's within the commit range and it made changes to WebGPU.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-31 11:28:53 PDT
Anfernee Viduya
Comment 2 2024-07-31 11:34:11 PDT
REPRODUCIBILITY: I was able to reproduce the crash on ToT using command run-webkit-tests http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/draw.html
Mike Wyrzykowski
Comment 3 2024-07-31 12:21:07 PDT
EWS
Comment 4 2024-08-01 00:49:13 PDT
Committed 281693@main (ab85a67f6b1b): <https://commits.webkit.org/281693@main> Reviewed commits have been landed. Closing PR #31553 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.