REGRESSION (280789@main?): [ Sonoma wk2 release ] http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/draw.html is constant crash. https://bugs.webkit.org/show_bug.cgi?id=277438 rdar://132918328

Reviewed by Dan Glastonbury.

Indirect buffer size must be of a minimum size.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::drawIndexedIndirect):
(WebGPU::RenderPassEncoder::drawIndirect):

Canonical link: https://commits.webkit.org/281693@main